# hyse

./: Makefile  README.md  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.github/workflows/: main.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: command.rs
src/modules/: ServerForm.vue
src/store/: setting.ts
src/util/: clash.ts  config.ts  config_v1.ts  config_v2.ts
src/views/: Server.vue  Setting.vue
